MilestoneRFAFullSandBox/src/objects/RFA__c.object
<CustomObject>
    <fields>
        <fullName>CreatedDate_by_Hour__c</fullName>
        <formula>CASE( VALUE(MID( TEXT(CreatedDate), 12, 2 ) ) ,
0, 9,
1, 10,
2, 11,
3, 12,
4, 13,
5, 14,
6, 15,
7, 16,
8, 17,
9, 18,
10,19,
11,20,
12,21,
13,22,
14,23,
15, 0,
16, 1,
17, 2,
18, 3,
19, 4,
20, 5,
21, 6,
22, 7,
23, 8,
24, 0,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate by Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DataClassificationNew__c</fullName>
        <formula>&quot;社外秘/Confidential&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataClassification__c</fullName>
        <inlineHelpText>Select the appropriate Data Classification for this request. Note: Highly Restricted information cannot be entered into the sytem. If your request is Highly Restricted  or contains Highly Restricted information please contact your Location Coordinator.</inlineHelpText>
        <label>Data Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Restricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Use</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Travel Expense</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaysinKeyOperations__c</fullName>
        <formula>REP_DaysInPreKeyOps__c + REP_DaysInKeyOps__c +  REP_DaysInPostKeyOps__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Key Operations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <description>Travel Expense</description>
        <label>Destination</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountedPaybackPeriodYears__c</fullName>
        <label>Discounted Payback Period (Years)</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EconomicProfitUSD__c</fullName>
        <inlineHelpText>Income from continuing operations, after giving effect to taxes and excluding the effects of interest (commonly referred to as NOPAT), in excess of a computed capital charge for average operating capital employed.</inlineHelpText>
        <label>Economic Profit (JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Travel Expense</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entertainment_Type_1__c</fullName>
        <description>Entertainment</description>
        <label>Entertainment Type 1</label>
        <picklist>
            <picklistValues>
                <fullName>Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Entertainment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entertainment_Type_2__c</fullName>
        <label>Entertainment Type 2</label>
        <picklist>
            <picklistValues>
                <fullName>Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Entertainment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entertainment_Type_3__c</fullName>
        <description>Entertainment</description>
        <label>Entertainment Type 3</label>
        <picklist>
            <picklistValues>
                <fullName>Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Entertainment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EquipmentPlacementPeriodYears__c</fullName>
        <inlineHelpText>The number of year equipment placement will occur.</inlineHelpText>
        <label>Equipment Placement Period (Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EstimatedCosts_PerPerson__c</fullName>
        <formula>/*
Total_Estimated_Costs__c / Total_Number_of_Attendees__c
*/

IF(Total_Number_of_Attendees__c == 0, 0, Total_Estimated_Costs__c / Total_Number_of_Attendees__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Costs per Person</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost_Accommodation__c</fullName>
        <description>Travel Expense</description>
        <label>Estimated Cost - Accommodation (JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost_Per_Diem__c</fullName>
        <description>Travel Expense</description>
        <inlineHelpText>In the case of CCEJ Emploee</inlineHelpText>
        <label>Estimated Cost - Per Diem (JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost_Transportation__c</fullName>
        <description>Travel Expense</description>
        <label>Estimated Cost - Transportation (JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Payment_1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Entertainment</description>
        <label>Estimated Costs (JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Payment_2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Entertainment</description>
        <label>Estimated Costs (JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Payment_3__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Entertainment</description>
        <label>Estimated Costs (JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExpectedCommitmentDate__c</fullName>
        <inlineHelpText>CCEJのCOAにより定義された契約予定日です。例えば、2月1日に契約同意され有効期限が3か月後であった場合には、契約予定日は2月1日となります。</inlineHelpText>
        <label>Expected Commitment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Capitalization_Date__c</fullName>
        <label>Expected Capitalization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Cash_Spend_Date__c</fullName>
        <label>Expected Cash Spend Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Explanation_Justification__c</fullName>
        <label>Explanation / Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FC_ConsumptionTax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FC_ConsumptionTax</label>
        <referenceTo>Financial_Constant__c</referenceTo>
        <relationshipLabel>RFA (FC_ConsumptionTax)</relationshipLabel>
        <relationshipName>RFAConsumptionTax</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FC_TaxRate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FC_TaxRate</label>
        <referenceTo>Financial_Constant__c</referenceTo>
        <relationshipLabel>RFA</relationshipLabel>
        <relationshipName>RFA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FC_WACC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FC_WACC</label>
        <referenceTo>Financial_Constant__c</referenceTo>
        <relationshipLabel>RFA (FC_WACC)</relationshipLabel>
        <relationshipName>RFA1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <formula>&apos;test&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>From</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Travel Expense</description>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>General_Comment_Link__c</fullName>
        <formula>HYPERLINK(&apos;https://c.ap0.content.force.com/servlet/servlet.FileDownload?file=01510000001evbL&apos;, &apos;Business Case Guideline&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>General Comment Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Comment_test__c</fullName>
        <label>General Comment test</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Guest_Attendees_Name_Title_or_Function__c</fullName>
        <description>Entertainment</description>
        <label>Guest Attendees Name/Title or Function</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Home_Address__c</fullName>
        <description>Travel Expense</description>
        <label>Home Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_PhoneNumber__c</fullName>
        <label>Home Phone #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IRR__c</fullName>
        <inlineHelpText>期待される成長率。</inlineHelpText>
        <label>IRR (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IncludeInCapitalReports__c</fullName>
        <inlineHelpText>投資管理者が年間投資報告のために使用します。</inlineHelpText>
        <label>Include In Capital Reports</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InitialBudgetYear__c</fullName>
        <inlineHelpText>投資が実行されると想定される年</inlineHelpText>
        <label>Initial Budget Year</label>
        <picklist>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsthisanAnnualCapitalPlanrequest__c</fullName>
        <inlineHelpText>年間資本計画の申請にフラグを付け、レポートで使用します。</inlineHelpText>
        <label>Is this an Annual Capital Plan request?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>L2Function_Requester__c</fullName>
        <formula>CreatedBy.L2_Function_E__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L2Function-Requester</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCOACategorySubCategory__c</fullName>
        <inlineHelpText>The Local Chart of Authority (LCOA) category as determined by the BU/Group/Function.  This field is used in addition to the DOA categories or in rare cases when the DOA category does not apply.</inlineHelpText>
        <label>LCOA Category / Sub Category</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LOC_Name__c</fullName>
        <label>LOC Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <label>Legal Entity</label>
        <picklist>
            <picklistValues>
                <fullName>【CCEJ】 Coca-Cola East Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【CCCJ】Coca-Cola Central Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【FVCe】FV Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【CJL】Central Japan Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【CJT】Central Japan Techno Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【Mikuni】Mikuni Coca-Cola Bottling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【MFD】Mikuni Foods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【MLO】Mikuni Logistics Operation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【MVS】Mikuni Vending Machine Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【MSE】Mikuni Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【MWI】Mikuni Wine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【Tokyo】Tokyo Coca-Cola Bottling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【FVS】Fresh Vender Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【WEX】WEX Tokyo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【MMN】Machine Maintenance Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【UVX】Urban Vend-X Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【Tone】Tone Coca-Cola Bottling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【EXS】EX-Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【TLS】Tone Logistics Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【TVS】Tone Vending Machine Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【TXC】TX Campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>【CCEJP】Coca-Cola East Japan Products</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NPVUSD__c</fullName>
        <inlineHelpText>正味現在価値</inlineHelpText>
        <label>NPV (JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NameAddress_Entertainment1__c</fullName>
        <label>Name / Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameAddress_Entertainment2__c</fullName>
        <description>Entertainment</description>
        <label>Name / Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameAddress_Entertainment3__c</fullName>
        <description>Entertainment</description>
        <label>Name / Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <description>Travel Expense</description>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_CCEJ_Attendees__c</fullName>
        <description>Entertainment</description>
        <label>Number of CCEJ Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Guest_Attendees__c</fullName>
        <description>Entertainment</description>
        <label>Number of Guest Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Nights__c</fullName>
        <formula>End_Date__c -  Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Nights</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofUnitsofEquipment__c</fullName>
        <inlineHelpText>The number of units covered in the CAPPrs agreement.</inlineHelpText>
        <label>Number of Units of Equipment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPEX_Amount__c</fullName>
        <inlineHelpText>CAPEX以外の費用（OPEX、DME)</inlineHelpText>
        <label>OPEX Amount (JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objectives_Rationale_Background__c</fullName>
        <label>Input</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Considerations_CPSP__c</fullName>
        <defaultValue>&quot;その他特記事項について記載します。&quot; +BR()+
&quot;　・複雑なスキームであったり特殊なケースの場合は会計処理方法を記載&quot; +BR()+
&quot;　・協働する関連部門・会社、（プロジェクト）推進体制、責任者を記載&quot; +BR()+
&quot;　・今後の主な予定（主要タイムラインやマイルストーン）を記載&quot; +BR()+
&quot;　・関連する承認申請（RFA）があればそのリンクを貼り付ける&quot; +BR()+
&quot;　・他部門、会社への考えられる影響を記載&quot; +BR()+
&quot;　・資金支出方法や資金調達方法を記載&quot; 

+BR()+BR()+

&quot;Describe accounting treatment for complex or unusual circumstances.&quot; +BR()+
&quot;Include department that is specifically accountable for ensuring expected results.&quot; +BR()+
&quot;Include implementation approach, timeline and milestones.&quot; +BR()+
&quot;Describe unique circumstances (e.g. reference to other RFAs or projects, potential impacts on customers, partners, etc.)&quot; +BR()+
&quot;Describe funding or financing source.&quot;</defaultValue>
        <label>Other Considerations</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Considerations_G__c</fullName>
        <defaultValue>&quot;その他特記事項について記載します。&quot; +BR()+
&quot;　・複雑なスキームであったり特殊なケースの場合は会計処理方法を記載&quot; +BR()+ 
&quot;　・協働する関連部門・会社、（プロジェクト）推進体制、責任者を記載&quot; +BR()+
&quot;　・今後の主な予定（主要タイムラインやマイルストーン）を記載&quot; +BR()+
&quot;　・関連する承認申請（RFA）のリンクを貼り付け&quot; +BR()+
&quot;　・他部門、会社への考えられる影響を記載&quot;

+BR()+BR()+

&quot;Describe accounting treatment for complex or unusual circumstances.&quot; +BR()+
&quot;Include department that is specifically accountable for ensuring expected results.&quot; +BR()+
&quot;Include implementation approach, timeline and milestones.&quot; +BR()+
&quot;Describe unique circumstances (e.g. reference to other projects, potential impacts on customers, partners, etc.)&quot;</defaultValue>
        <label>Other Considerations</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Considerations__c</fullName>
        <label>Input</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Supporting_Documents_CPSP__c</fullName>
        <defaultValue>&quot;ドラフトの契約書や見積書、実施計画書のファイルを添付&quot; +BR()+
&quot;（この申請書画面を保存後、下部にある「メモ＆添付ファイル」の欄に添付してください）&quot;

+BR()+BR()+

&quot;Provide other supporting documents, e.g. supplier/manufacturer production equipment cost quotes, copy of the draft purchase contract, indicating whether it has been checked by Legal.&quot;</defaultValue>
        <label>Other Supporting Documents</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Supporting_Documents_G__c</fullName>
        <defaultValue>&quot;ドラフトの契約書や見積書、実施計画書のファイルを添付&quot; +BR()+
&quot;（この申請書画面を保存後、下部にある「メモ＆添付ファイル」の欄に添付してください）&quot;

+BR()+BR()+

&quot;Provide other supporting documents, e.g. overview of accounts receivable aging schedule&quot; +BR()+
&quot;Copy of the draft purchase contract, indicating whether it has been checked by Legal.&quot;</defaultValue>
        <label>Other Supporting Documents</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Others_Entertainment__c</fullName>
        <description>Entertainment</description>
        <label>Others</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Others__c</fullName>
        <description>Entertainment</description>
        <label>Others</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_Name__c</fullName>
        <label>POC Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment_type__c</fullName>
        <label>Payment type</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PerformanceReportingPeriodMonths__c</fullName>
        <inlineHelpText>The number of performance months covered by the CAPPrs agreement.</inlineHelpText>
        <label>Performance Reporting Period (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Date__c</fullName>
        <description>CokeOne Entertainment template</description>
        <label>Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PrimaryCOACategory__c</fullName>
        <inlineHelpText>この申請について当てはまるCOAカテゴリーを最大3つまで選択して下さい。</inlineHelpText>
        <label>Primary COA Category</label>
        <picklist>
            <picklistValues>
                <fullName>I. Purchase, Disposal, Revaluation or Write-off of Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II. Leases and Rental Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III. Pricing / Operating Revenues / Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV. Operating Expenses and Purchases (not covered by General Threshold)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V. Treasury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VI. Personnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VII. Other Transactions / Activities / Contracts and Agreements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIII. Corporate Structures and Mergers and Acquisitions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IX. Board of Directors Approvals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A. Approval of Pricing Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. Approval of Customer Terms and Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. Price promotion for Marketing &amp; Commercial leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D. Credit Terms / Policies</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PrimaryCOASubCategory2__c</fullName>
        <label>Primary COA Sub Category 2</label>
        <picklist>
            <controllingField>PrimaryCOASubCategory__c</controllingField>
            <picklistValues>
                <fullName>1. Approval of Annual Capital Investment project Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Capital Investment Project Budget Approved (Capital Projects, Medium Projects and Small Projects)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Capital Investment Project Budget Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Unbudgeted Capital Investment Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Change of scope in the approved Capital Investment Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>a. Fixed Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b. Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c. Intangible fixed assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Write-offs of uncollectible trade accounts receivable and other receivables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Inventory Adjustments and Disposals (incl. Flush-outs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Real Estate - Rental Contracts (CCEJ or Subsidiaries as Tenant)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Movable Assets (including vehicles)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Establishment of and changes to Price, Terms and Conditions Concept (PTC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Specific deviation or a new program to the approved Price, Terms and Conditions Concept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. New price lists / rebate lists and changes to existing price lists / rebate lists for the full service vending machine business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Changes of gross price lists valid for certain channels, packages and brands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Determination of and changes to the standard cost of sales and intercompany transfer price for KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Determination of changes to standard cost of sales for Non-KO products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Approval of the following Customer Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Approval of Customer Agreement for CS KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Approval of Customer Agreement for Food KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Approval of Customer Agreement for SAKAYA KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Approval of Customer Agreement for VM Corporate Sales &amp; Hunter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Approval of Customer Agreement for VM Div. Corporate Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Approval of Customer Agreement for Equipment Operating Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Approval of Customer Agreement for FV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Establishing or amending overall CCEJ credit policy (including credit limits)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Initial setting of credit limits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Changes of credit limits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Changes of credit limits - Create less risk to the company (shortening credit terms)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>